feat!: updated header mobile

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -76,7 +76,7 @@
     height: 100%;
 
     @media #{core.$screen-lg-up} {
-      padding: 2.171rem 0 2.171rem 1.5rem;
+      padding: 2.171rem 0 2.171rem core.$space-l;
       height: auto;
     }
   }
@@ -95,8 +95,8 @@
         core.$white
       ));
       background-repeat: no-repeat;
-      width: 1.5rem;
-      height: 1.5rem;
+      width: core.$space-l;
+      height: core.$space-l;
       transform: translate(50%, 50%);
       position: absolute;
       top: 0.625rem;
@@ -125,8 +125,8 @@
         core.$white
       ));
       background-repeat: no-repeat;
-      width: 1.5rem;
-      height: 1.5rem;
+      width: core.$space-l;
+      height: core.$space-l;
       transform: translate(50%, 50%);
       position: absolute;
       top: 0.625rem;
@@ -165,7 +165,7 @@
 
     & a {
       display: grid;
-      padding: 1rem 0;
+      padding: core.$space-m 0;
     }
 
     & img {
@@ -320,7 +320,7 @@
   }
 
   &__nav-secondary {
-    background-color: #48206c;
+    background-color:  core.$purple-600;
     grid-area: secondarynav;
   }
 
@@ -408,7 +408,7 @@
       margin-left: auto;
       margin-right: auto;
       padding-top: 0;
-      padding-bottom: 1rem;
+      padding-bottom: core.$space-m;
     }
   }
 
@@ -544,7 +544,7 @@
     padding: core.$space-m core.$space-xxxl core.$space-xxl core.$space-xxxl;
     background: core.$white;
     //box-shadow: 0 0.75rem core.$space-l rgb(24 24 24 / 20%);
-    border-radius: 0 0 0.25rem 0.25rem;
+    border-radius: 0 0 core.$space-xs core.$space-xs;
 
     @media #{core.$screen-xl-up} {
       max-width: 77.25rem;
@@ -628,11 +628,10 @@ body.no-scroll {
 }
 
 /* MOBILE MENU */
-
 .slide-menu {
   width: 100%;
   max-width: 100%;
-  background-color: #48206c;
+  background-color:  core.$purple-600; // Keeping as literal as this is a darker purple than core.$purple-500
   height: calc(var(--app-height) - 4.3rem);
   display: none;
   box-sizing: border-box;
@@ -645,328 +644,199 @@ body.no-scroll {
   right: 0;
   overflow-y: auto;
   overflow-x: hidden;
-  font-size: 1rem;
+  font-size: core.$space-m;
   line-height: 1.6;
-  color: #51247a;
-}
+  color:  core.$purple-500; // Keeping as literal as this is a darker purple than core.$purple-500
 
-@media (min-width: 64rem) {
-  .slide-menu {
+  @media #{core.$screen-lg-up} {
     display: none !important;
   }
-}
-/* inserted by JS, allows back to work */
-.slide-menu .slide-menu__slider {
-  width: 100%;
-  transform: translateX(0);
-  transition: transform 0.3s ease-in-out;
-  will-change: transform;
+
+  /* inserted by JS, allows back to work */
+  &__slider {
+    width: 100%;
+    transform: translateX(0);
+    transition: transform 0.3s ease-in-out;
+    will-change: transform;
+  }
+
+  ul {
+    position: relative;
+    width: 100%;
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+    background-color: core.$white;
+
+    /* positions the submenus */
+    ul {
+      position: absolute;
+      top: 0;
+      left: 100%;
+      display: none;
+    }
+  }
+
+  li {
+    margin-bottom: 0;
+  }
+
+  /* Menu links */
+  a {
+    display: block;
+    cursor: pointer;
+    padding: core.$space-m core.$space-xxl;
+    text-decoration: none;
+    font-size: core.$space-m;
+    color: core.$black; // Keeping as literal
+    position: relative;
+    font-weight: 400;
+
+    &:hover {
+      color: core.$black; // Keeping as literal
+      background-color: core.$grey-50; // Keeping as literal
+    }
+  }
+
+  /* returns the padding for Parent page link */
+  ul li:nth-of-type(2) a {
+    padding-left: core.$space-l;
+
+    &.is-active {
+      padding-left: calc(core.$space-l - 6px);
+    }
+  }
+
+  /* Back to previous menu section */
+  &__backlink {
+    font-weight: core.$font-weight-medium;
+
+    &::before {
+      content: "";
+      background-image: url("data:image/svg+xml,%3csvg viewBox=%270 0 24 24%27 fill=%27none%27 xmlns=%27http://www.w3.org/2000/svg%27%3e%3cpath d=%27m15 5-7 7 7 7%27 stroke=%27%23000%27 stroke-width=%271.5%27 stroke-linecap=%27round%27 stroke-linejoin=%27round%27%3e%3c/path%3e%3c/svg%3e");
+      background-repeat: no-repeat;
+      width: core.$space-l;
+      height: core.$space-l;
+      transform: translateY(50%);
+      position: absolute;
+      left: core.$space-m;
+      top: core.$space-xs;
+    }
+  }
+
+  /* Child menu item */
+  &__decorator::before {
+    content: "";
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='m10 17 5-5-5-5' stroke='%2319151C' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    width: core.$space-l;
+    height: core.$space-l;
+    transform: translateY(50%);
+    position: absolute;
+    right: core.$space-l;
+    top: core.$space-xs;
+  }
+
+  /* UQ Home back link */
+  .uq-header__nav-mobile-home {
+    padding-left: calc(core.$space-xxxl - 4px);
+    font-weight: core.$font-weight-medium;
+
+    &::before {
+      content: "";
+      background: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M20%2012L5%2012%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cpath%20d%3D%22M10%206L4%2012L10%2018%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+      background-repeat: no-repeat;
+      width: core.$space-l;
+      height: core.$space-l;
+      transform: translateY(50%);
+      position: absolute;
+      left: core.$space-m;
+      top: core.$space-xs;
+    }
+  }
+
+  .uq-header__nav-mobile-secondary-item {
+    background-color:  core.$purple-600;
+
+    &:hover {
+      background-color:  core.$purple-600;
+    }
+  }
+
+  .uq-header__nav-mobile-secondary {
+    color: core.$white;
+    padding: core.$space-s core.$space-l;
+
+    &:hover {
+      color:  core.$purple-600;
+      background-color: core.$white;
+    }
+  }
+
+  /* convoluted way to target the first Secondary item and add space above, refine when better classes added */
+  ul > li.uq-header__nav-mobile-secondary-item {
+    padding-top: core.$space-m;
+
+    /* convoluted way to target the first Secondary item and add space above, refine when better classes added */
+    ~ li.uq-header__nav-mobile-secondary-item {
+      padding-top: 0rem;
+    }
+  }
+
+  .uq-header__newglobal-nav-parent {
+    font-weight: core.$font-weight-medium;
+  }
+
+  .uq-header__nav-mobile-primary {
+    color: core.$white;
+    padding: core.$space-m core.$space-l;
+    background-color:  core.$purple-500;
+    font-weight: core.$font-weight-medium;
+
+    &:hover {
+      color:  core.$purple-500;
+      background-color: core.$white;
+
+      .slide-menu__decorator::before {
+        content: "";
+        background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M4%2012L19%2012%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cpath%20d%3D%22M14%2018L20%2012L14%206%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+      }
+    }
+
+    .slide-menu__decorator::before {
+      content: "";
+      background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M4%2012L19%2012%22%20stroke%3D%22%23fff%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cpath%20d%3D%22M14%2018L20%2012L14%206%22%20stroke%3D%22%23fff%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+    }
+  }
+
+  /* Active state Calc function needs a glbal variable to allow targeting of active subitems */
+  .is-active {
+    border-left: 6px solid  core.$purple-500;
+    padding-left: calc(core.$space-l - 6px);
+    background-color: core.$grey-50;
+  }
+
+  ul ul .is-active {
+    padding-left: calc(2.25rem - 6px);
+  }
+
+  .uq-header__nav-mobile-audience-link {
+    padding-right: core.$space-xxxl;
+  }
 }
 
-.slide-menu ul {
-  position: relative;
-  width: 100%;
-  margin: 0;
-  padding-left: 0;
-  list-style: none;
-  background-color: #fff;
-}
-
-/* positions the submenus */
-.slide-menu ul ul {
-  position: absolute;
-  top: 0;
-  left: 100%;
-  display: none;
-}
-
-.slide-menu li {
-  margin-bottom: 0;
-}
 .uq-header__nav-mobile-link,
 .uq-header__nav-mobile-audience-link,
 .uq-header__nav-mobile-home,
 .slide-menu__backlink {
-  border-bottom: 1px solid #e8e8e8;
-}
-
-/* Menu links */
-.slide-menu a {
-  display: block;
-  cursor: pointer;
-  padding: 1rem 2.5rem;
-  text-decoration: none;
-  font-size: 1rem;
-  color: #19151c;
-  position: relative;
-  font-weight: 400;
-}
-.slide-menu a:hover {
-  color: #19151c;
-  background-color: #f3f3f4;
-}
-/* returns the padding for Parent page link */
-.slide-menu ul li:nth-of-type(2) a {
-  padding-left: 1.5rem;
-}
-.slide-menu ul li:nth-of-type(2) a.is-active {
-  padding-left: calc(1.5rem - 6px);
-}
-/* Back to previous menu section */
-.slide-menu .slide-menu__backlink {
-  font-weight: 500;
-}
-
-/* Back to previous menu section */
-.slide-menu .slide-menu__backlink::before {
-  content: "";
-  background-image: url("data:image/svg+xml,%3csvg viewBox=%270 0 24 24%27 fill=%27none%27 xmlns=%27http://www.w3.org/2000/svg%27%3e%3cpath d=%27m15 5-7 7 7 7%27 stroke=%27%23000%27 stroke-width=%271.5%27 stroke-linecap=%27round%27 stroke-linejoin=%27round%27%3e%3c/path%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  width: 1.5rem;
-  height: 1.5rem;
-  transform: translateY(50%);
-  position: absolute;
-  left: 1rem;
-  top: 0.25rem;
-}
-/* Child menu item */
-.slide-menu__decorator::before {
-  content: "";
-  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='m10 17 5-5-5-5' stroke='%2319151C' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  width: 1.5rem;
-  height: 1.5rem;
-  transform: translateY(50%);
-  position: absolute;
-  right: 1.5rem;
-  top: 0.25rem;
+  border-bottom: 1px solid  core.$grey-100; // Keeping as literal
 }
 
 .uq-header__nav-mobile-local {
-  background-color: #fff;
-}
-
-/* UQ Home back link  */
-.slide-menu .uq-header__nav-mobile-home {
-  padding-left: calc(3rem - 4px);
-  font-weight: 500;
-}
-.slide-menu .uq-header__nav-mobile-home::before {
-  content: "";
-  background: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M20%2012L5%2012%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cpath%20d%3D%22M10%206L4%2012L10%2018%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
-  background-repeat: no-repeat;
-  width: 1.5rem;
-  height: 1.5rem;
-  transform: translateY(50%);
-  position: absolute;
-  left: 1rem;
-  top: 0.25rem;
-}
-
-.slide-menu .uq-header__nav-mobile-secondary-item {
-  background-color: #48206c;
-}
-
-.slide-menu .uq-header__nav-mobile-secondary-item:hover {
-  background-color: #48206c;
-}
-
-.slide-menu .uq-header__nav-mobile-secondary {
-  color: #fff;
-  padding: 0.5rem 1.5rem;
-}
-
-.slide-menu .uq-header__nav-mobile-secondary:hover {
-  color: #48206c;
-  background-color: #fff;
-}
-
-/* convoluted way to target the first Secondary item and add space above, refine when better classes added */
-.slide-menu ul > li.uq-header__nav-mobile-secondary-item {
-  padding-top: 1rem;
-}
-/* convoluted way to target the first Secondary item and add space above, refine when better classes added */
-.slide-menu
-  ul
-  > li.uq-header__nav-mobile-secondary-item
-  ~ li.uq-header__nav-mobile-secondary-item {
-  padding-top: 0rem;
-}
-
-.slide-menu .uq-header__newglobal-nav-parent {
-  font-weight: 500;
-}
-
-.slide-menu .uq-header__nav-mobile-primary {
-  color: #fff;
-  padding: 1rem 1.5rem;
-  background-color: #51247a;
-  font-weight: 500;
-}
-
-.slide-menu .uq-header__nav-mobile-primary:hover {
-  color: #51247a;
-  background-color: #fff;
-}
-
-.slide-menu .uq-header__nav-mobile-primary .slide-menu__decorator::before {
-  content: "";
-  background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M4%2012L19%2012%22%20stroke%3D%22%23fff%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cpath%20d%3D%22M14%2018L20%2012L14%206%22%20stroke%3D%22%23fff%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
-}
-.slide-menu
-  .uq-header__nav-mobile-primary:hover
-  .slide-menu__decorator::before {
-  content: "";
-  background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M4%2012L19%2012%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cpath%20d%3D%22M14%2018L20%2012L14%206%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
-}
-/* Active state Calc function needs a glbal variable to allow targeting of active subitems */
-.slide-menu .is-active {
-  border-left: 6px solid #51247a;
-  padding-left: calc(1.5rem - 6px);
-  background-color: #f3f3f4;
-}
-.slide-menu ul ul .is-active {
-  padding-left: calc(2.25rem - 6px);
-}
-
-.slide-menu .uq-header__nav-mobile-audience-link {
-  padding-right: 3rem;
+  background-color: core.$white;
 }
 
 .uq-site-header__navigation-toggle {
   display: none;
 }
 
-.admin-menu .slide-menu {
-  top: 7.5rem;
-}
-
-@media (min-width: 37.5rem) {
-  .admin-menu .slide-menu {
-    top: 6.15rem;
-  }
-}
-
-/* D7 overrides and hacks */
-
-.admin-menu {
-  .slide-menu {
-    top: 7.5rem;
-
-    @media #{core.$screen-md-up} {
-      top: 6.15rem;
-    }
-  }
-}
-.uq-header {
-  line-height: 1.5;
-  font-family: core.$roboto;
-}
-.uq-header__logo img {
-  max-width: unset;
-}
-
-.uq-header__search-query-submit {
-  background-color: unset !important;
-}
-
-.uq-header__search-range .uq-header__search-label {
-  max-width: unset;
-}
-
-.uq-header__nav-primary-list li {
-  margin: 0;
-}
-
-.uq-header__nav-primary-link {
-  display: block;
-  color: #fff;
-  text-decoration: none;
-  transition:
-    background-color 0.25s,
-    border-color 0.25s;
-  font-weight: core.$font-weight-normal;
-  position: relative;
-}
-
-.uq-header__search-container {
-  form,
-  fieldset {
-    border: unset;
-    padding: 0;
-    margin: 0;
-  }
-}
-
-.uq-header__search-query-input {
-  height: 45px !important;
-}
-
-.uq-header .nav-primary__search-toggle {
-  margin-bottom: 0;
-}
-
-.uq-header .nav-primary__menu-toggle {
-  margin-bottom: 0 !important;
-  font: initial;
-  font-size: 0.833rem;
-  line-height: normal;
-}
-
-/* D7 and D9 search fixes */
-.uq-header__search-range {
-  display: inline-block;
-}
-
-.uq-header__search-range input[type="radio"] {
-  height: 20px;
-  width: 20px;
-  vertical-align: top;
-  display: inline-block;
-  border-radius: 50%;
-  background-color: transparent;
-  margin: 3px 3px 0 5px;
-  position: absolute;
-
-  /* Missing form component styles */
-  appearance: none;
-  -webkit-appearance: none;
-  border: 1px solid #e7e3e0;
-  cursor: pointer;
-}
-.uq-header__search-range input[type="radio"] + label {
-  margin-bottom: 1rem;
-  margin-left: 0.5rem;
-  margin-right: 1rem;
-  padding-top: 0.125rem;
-  padding-left: 1.5rem;
-}
-
-.uq-header__search-range label {
-  color: core.$white;
-  font-weight: core.$font-weight-normal;
-  display: inline-block;
-  vertical-align: top;
-}
-
-input[type="radio"].uq-header__search-radio:checked {
-  border-color: core.$white;
-  border-width: 2px;
-}
-
-input[type="radio"].uq-header__search-radio:focus {
-  border-color: core.$white;
-}
-
-input[type="radio"].uq-header__search-radio:checked::after {
-  content: "";
-  background-color: core.$white;
-  border-radius: 50%;
-  content: "";
-  display: block;
-  position: absolute;
-  top: 3px;
-  left: 3px;
-  height: 10px;
-  width: 10px;
-}
