--- a/packages/icon/src/scss/_global.scss
+++ b/packages/icon/src/scss/_global.scss
@@ -6,6 +6,7 @@
 @use "_build/icons" as *;
 
 $colour-placeholder: "~~COLOR~~";
+$stroke-width-placeholder: "~~STROKEWIDTH~~";
 
 $icon-primary-filter: core.$filter-primary;
 $icon-light-filter: core.$filter-white;
@@ -64,19 +65,34 @@ $icon-text-filter: core.$filter-text;
   @return $string;
 }
 
-@function get-icon($icon, $color: #000) {
+@function get-icon($icon, $color: #000, $stroke-width: 1) {
   @if meta.type-of($color) != "color" and $color != "none" {
     @warn 'The requested color - "' + $color + '" - was not recognized as a SASS color value.';
     @return null;
   }
 
+  @if meta.type-of($stroke-width) !=
+    "number" and
+    meta.type-of($stroke-width) !=
+    "string"
+  {
+    @warn 'The requested stroke width - "' + $stroke-width + '" - was not a valid number or string value.';
+    @return null;
+  }
+
   @if map.has-key($icons, $icon) {
-    $icon: map.get($icons, $icon);
+    $icon-data: map.get($icons, $icon);
     // Since we're inserting the colour into a data URI (which is made up
     // of URL-escaped SVG), we need to make sure the incoming value is
     // already escaped.
     $escaped-color: -str-replace("" + $color, "#", "%23");
-    $data-uri: -str-replace($icon, $colour-placeholder, $escaped-color);
+    $data-uri: -str-replace($icon-data, $colour-placeholder, $escaped-color);
+    $escaped-stroke-width: "" + $stroke-width;
+    $data-uri: -str-replace(
+      $data-uri,
+      $stroke-width-placeholder,
+      $escaped-stroke-width
+    );
 
     @return $data-uri;
   }
