chore: fix select height

--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -244,6 +244,7 @@ body {
   & select {
     background-image: none !important;
     padding-inline-end: 30px;
+    height: auto;
   }
 
   // True/false switch
