fix: added back in a small logo override for Drupal 11

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -173,6 +173,8 @@
 
       @media #{core.$screen-lg-up} {
         height: 40px;
+        max-width: unset; // override Drupal (img, picture max-width: 100%)
+}
       }
     }
   }
