fix: add id values to header and footer for anchor targeting

--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="uq-footer" data-gtm-category="Footer">
+<footer id="uq-footer" class="uq-footer" data-gtm-category="Footer">
   <div  class="uq-acknowledgement uq-acknowledgement--large">
     <div class="uq-acknowledgement__content">
       <div class="uq-acknowledgement__text">
