--- a/packages/storybook-html/stories/components/header/header-interim.html
+++ b/packages/storybook-html/stories/components/header/header-interim.html
@@ -1,4 +1,4 @@
-<header class="uq-header" data-gtm-category="Header">
+<header id="uq-header" class="uq-header" data-gtm-category="Header">
   <div class="uq-header__container">
     <div class="uq-header__menu-toggle" data-target="global-mobile-nav" data-gtm-category="Primary header">
       <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle" data-gtm-action="Toggle">Menu</button>
