fix: update sbdocs to target correct classes. apply robot across doco

--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -20,53 +20,55 @@ body {
 
 // Set heading styles
 .sbdocs {
-  &-h1,
+
+  * { 
+    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif !important; 
+  }
+
+  h1,
   &-title {
     font-size: core.$font-size-xxxl !important;
     margin: 0 0 core.$space-s !important;
-    font-weight: core.$font-weight-medium !important;
-    color: core.$purple-500 !important;
-    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+
   }
 
-  &-h2 {
+  h2 {
     font-size: core.$font-size-xxxl !important;
   }
 
-  &-h3 {
+  h3 {
     font-size: core.$font-size-xxl !important;
   }
 
-  &-h4 {
+  h4 {
     font-size: core.$font-size-xl !important;
   }
 
-  &-h5 {
+  h5 {
     font-size: core.$font-size-l !important;
   }
 
-  &-h6 {
+  h6 {
     font-size: core.$font-size-m !important;
   }
 
-  &-h2,
-  &-h3,
-  &-h4,
-  &-h5,
-  &-h6 {
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     margin: core.$space-xxxl 0 0 !important;
     font-weight: core.$font-weight-medium !important;
     padding-bottom: 0 !important;
     border-bottom: 0 !important;
-    color: core.$purple-500 !important;
     font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   }
 
-  &-h2 + :not(p),
-  &-h3 + :not(p),
-  &-h4 + :not(p),
-  &-h5 + :not(p),
-  &-h6 + :not(p) {
+  h2 + :not(p),
+  h3 + :not(p),
+  h4 + :not(p),
+  h5 + :not(p),
+  h6 + :not(p) {
     margin-top: 1rem !important;
   }
 }
