ITSADSSD-65908: add id values to header and footer for anchor targeting (#721)
* fix: add id values to header and footer for anchor targeting
* fix: header stories id duplicate
* fix: add focusable states for .visibility-hidden utility class
* fix: add skip links to body doco
* fix: update sbdocs to target correct classes. apply robot across doco
* fix: sb docs and toc styling tweaks
* fix: add code monospace override
* fix: update skip links doco, customize source code output
* fix: add main wrapper and skip links to page templates. TODO: clean up skip link templating
* fix: linting and code cleanup
* fix: minor get started cleanup
* fix: home template structure

--- a/packages/storybook-html/.storybook/custom/components/Toc.scss
+++ b/packages/storybook-html/.storybook/custom/components/Toc.scss
@@ -6,6 +6,8 @@
   .toc-list {
     .toc-list-item {
       a.toc-link {
+        font-weight: core.$font-weight-normal;
+
         &::before {
           width: 0;
         }
@@ -24,6 +26,7 @@
       }
 
       & > a {
+        font-weight: core.$font-weight-bold;
         color: core.$purple-500;
       }
     }
