--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -312,6 +312,15 @@ $use-encapsulation: false !default;
 
   .visually-hidden {
     @include visually-hidden;
+
+    &.focusable:active,
+    &.focusable:focus {
+      position: static !important;
+      overflow: visible;
+      clip: auto;
+      width: auto;
+      height: auto;
+    }
   }
 }
 
